--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
                         <div class="col col-5">
                             <div class="copyright">
                                 <div class="footer-logo">
-                                    <a href="#"><img src="assets/svg/logo.svg" alt=""></a>
+                                    <a href="index.html"><img src="assets/svg/logo.svg" alt=""></a>
                                 </div>
                                 <div class="license">
                                     <a href="#"><img style="filter: saturate(0%) brightness(70%) contrast(1000%) invert(1) opacity(.35); width: 80px;" src="assets/png/license/80xNxuk.png.pagespeed.ic.BRtOgYY3F5.png" alt="Licensed by UK Gambling Comission" class="malta_license"></a>
