--- a/review.html
+++ b/review.html
@@ -111,7 +111,7 @@
                                     <div class="withPager">
                                         <div class="list">
                                             <div class="task-list">
-                                                <p><strong>Отзывы о Френдс казино</strong> — <strong>количество</strong>
+                                                <p><strong>Отзывы о казино</strong> — <strong>количество</strong>
                                                     рецензий <strong>16 от реальных игроков</strong>, свидетельствует о
                                                     том, что заведение заинтересовано не только в честной игре, но и о
                                                     положительном мнении гемблеров о своей площадке. О качественном,
